[package]
version = '0.202106.0'
name = 'tests-make'
description = 'A CLI tool for tests'
edition = '2018'
license = 'MIT'
authors = ['fuyutarow <fuyutarow@gmail.com>']
repository = 'https://github.com/fuyutarow/tests-make'
keywords = ['snippet']
categories = ['command-line-utilities']
readme = 'README.md'

[lib]
name = 'cli'
path = 'src/lib/mod.rs'

[dependencies]
serde = '1.0.125'
serde_derive = '1.0.125'
toml = '0.5.8'
structopt = '0.3.21'
serde_json = '1.0.64'
itertools = '0.10.0'
anyhow = '1.0.40'
run_script = "0.8.0"
indexmap = { version = "1.6.2", features = ["serde"] }
colored = "2.0.0"
collect-mac = "0.1.0"
